--- a/[Tyler_McRorie]Unit_4_Challenge_Tier_3.ipynb
+++ b/[Tyler_McRorie]Unit_4_Challenge_Tier_3.ipynb
@@ -2716,7 +2716,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/49/57p15qz10bdb3cdxt3mldxgw0000gn/T/ipykernel_30654/3244038708.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/49/57p15qz10bdb3cdxt3mldxgw0000gn/T/ipykernel_31810/3244038708.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  df2 = df.groupby(['London_Borough','Year']).mean()\n"
      ]
     },
@@ -2752,53 +2752,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Lewisham</th>\n",
-       "      <th>2017</th>\n",
-       "      <td>411049.024875</td>\n",
+       "      <th>Merton</th>\n",
+       "      <th>2008</th>\n",
+       "      <td>300674.501150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Barking &amp; Dagenham</th>\n",
-       "      <th>2011</th>\n",
-       "      <td>163465.144225</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Croydon</th>\n",
-       "      <th>2016</th>\n",
-       "      <td>355846.809333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Barking &amp; Dagenham</th>\n",
-       "      <th>2001</th>\n",
-       "      <td>88664.058223</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Westminster</th>\n",
-       "      <th>2020</th>\n",
-       "      <td>960469.218567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013</th>\n",
-       "      <td>789972.477308</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bromley</th>\n",
+       "      <th>Camden</th>\n",
        "      <th>1995</th>\n",
-       "      <td>81967.316732</td>\n",
+       "      <td>120367.431783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ealing</th>\n",
+       "      <th>1999</th>\n",
+       "      <td>126278.342342</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Waltham Forest</th>\n",
-       "      <th>2018</th>\n",
-       "      <td>440859.411128</td>\n",
+       "      <th>1997</th>\n",
+       "      <td>68228.785835</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Merton</th>\n",
+       "      <th>Barking &amp; Dagenham</th>\n",
+       "      <th>2003</th>\n",
+       "      <td>142498.927800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tower Hamlets</th>\n",
        "      <th>1996</th>\n",
-       "      <td>83999.034578</td>\n",
+       "      <td>70094.724437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Haringey</th>\n",
-       "      <th>2015</th>\n",
-       "      <td>480636.083083</td>\n",
+       "      <th>Hounslow</th>\n",
+       "      <th>1995</th>\n",
+       "      <td>72941.170845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Croydon</th>\n",
+       "      <th>2011</th>\n",
+       "      <td>215427.576283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hounslow</th>\n",
+       "      <th>2005</th>\n",
+       "      <td>222920.927450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Havering</th>\n",
+       "      <th>2000</th>\n",
+       "      <td>109432.774133</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2807,16 +2808,16 @@
       "text/plain": [
        "                         Average_price\n",
        "London_Borough     Year               \n",
-       "Lewisham           2017  411049.024875\n",
-       "Barking & Dagenham 2011  163465.144225\n",
-       "Croydon            2016  355846.809333\n",
-       "Barking & Dagenham 2001   88664.058223\n",
-       "Westminster        2020  960469.218567\n",
-       "                   2013  789972.477308\n",
-       "Bromley            1995   81967.316732\n",
-       "Waltham Forest     2018  440859.411128\n",
-       "Merton             1996   83999.034578\n",
-       "Haringey           2015  480636.083083"
+       "Merton             2008  300674.501150\n",
+       "Camden             1995  120367.431783\n",
+       "Ealing             1999  126278.342342\n",
+       "Waltham Forest     1997   68228.785835\n",
+       "Barking & Dagenham 2003  142498.927800\n",
+       "Tower Hamlets      1996   70094.724437\n",
+       "Hounslow           1995   72941.170845\n",
+       "Croydon            2011  215427.576283\n",
+       "Hounslow           2005  222920.927450\n",
+       "Havering           2000  109432.774133"
       ]
      },
      "execution_count": 35,
@@ -3575,10 +3576,47 @@
     "### 4. Conclusion\n",
     "What can you conclude? Type out your conclusion below. \n",
     "\n",
+    "Please see the google doc for the 'Summarize your findings' portion of this assignment for written conclusions and explanations. \n",
+    "\n",
     "Look back at your notebook. Think about how you might summarize what you have done, and prepare a quick presentation on it to your mentor at your next meeting. \n",
     "\n",
     "We hope you enjoyed this practical project. It should have consolidated your data hygiene and pandas skills by looking at a real-world problem involving just the kind of dataset you might encounter as a budding data scientist. Congratulations, and looking forward to seeing you at the next step in the course! "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
