Updated summary section

--- a/[Tyler_McRorie]Unit_4_Challenge_Tier_3.ipynb
+++ b/[Tyler_McRorie]Unit_4_Challenge_Tier_3.ipynb
@@ -2716,7 +2716,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/49/57p15qz10bdb3cdxt3mldxgw0000gn/T/ipykernel_31810/3244038708.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "/var/folders/49/57p15qz10bdb3cdxt3mldxgw0000gn/T/ipykernel_54258/3244038708.py:2: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
       "  df2 = df.groupby(['London_Borough','Year']).mean()\n"
      ]
     },
@@ -2752,72 +2752,72 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Merton</th>\n",
-       "      <th>2008</th>\n",
-       "      <td>300674.501150</td>\n",
+       "      <th>Havering</th>\n",
+       "      <th>2010</th>\n",
+       "      <td>220413.256500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>City of London</th>\n",
+       "      <th>1999</th>\n",
+       "      <td>171300.061875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Richmond upon Thames</th>\n",
+       "      <th>2004</th>\n",
+       "      <td>316540.906067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Brent</th>\n",
+       "      <th>2017</th>\n",
+       "      <td>487703.754375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Camden</th>\n",
-       "      <th>1995</th>\n",
-       "      <td>120367.431783</td>\n",
+       "      <th>2011</th>\n",
+       "      <td>554392.962617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ealing</th>\n",
-       "      <th>1999</th>\n",
-       "      <td>126278.342342</td>\n",
+       "      <th>Lewisham</th>\n",
+       "      <th>2021</th>\n",
+       "      <td>438112.558758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Waltham Forest</th>\n",
-       "      <th>1997</th>\n",
-       "      <td>68228.785835</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Barking &amp; Dagenham</th>\n",
-       "      <th>2003</th>\n",
-       "      <td>142498.927800</td>\n",
+       "      <th>City of London</th>\n",
+       "      <th>2007</th>\n",
+       "      <td>433838.474217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Tower Hamlets</th>\n",
-       "      <th>1996</th>\n",
-       "      <td>70094.724437</td>\n",
+       "      <th>2015</th>\n",
+       "      <td>421943.837017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Hounslow</th>\n",
-       "      <th>1995</th>\n",
-       "      <td>72941.170845</td>\n",
+       "      <th>Waltham Forest</th>\n",
+       "      <th>2015</th>\n",
+       "      <td>357513.365125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Croydon</th>\n",
+       "      <th>Hammersmith &amp; Fulham</th>\n",
        "      <th>2011</th>\n",
-       "      <td>215427.576283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hounslow</th>\n",
-       "      <th>2005</th>\n",
-       "      <td>222920.927450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Havering</th>\n",
-       "      <th>2000</th>\n",
-       "      <td>109432.774133</td>\n",
+       "      <td>518573.673433</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         Average_price\n",
-       "London_Borough     Year               \n",
-       "Merton             2008  300674.501150\n",
-       "Camden             1995  120367.431783\n",
-       "Ealing             1999  126278.342342\n",
-       "Waltham Forest     1997   68228.785835\n",
-       "Barking & Dagenham 2003  142498.927800\n",
-       "Tower Hamlets      1996   70094.724437\n",
-       "Hounslow           1995   72941.170845\n",
-       "Croydon            2011  215427.576283\n",
-       "Hounslow           2005  222920.927450\n",
-       "Havering           2000  109432.774133"
+       "                           Average_price\n",
+       "London_Borough       Year               \n",
+       "Havering             2010  220413.256500\n",
+       "City of London       1999  171300.061875\n",
+       "Richmond upon Thames 2004  316540.906067\n",
+       "Brent                2017  487703.754375\n",
+       "Camden               2011  554392.962617\n",
+       "Lewisham             2021  438112.558758\n",
+       "City of London       2007  433838.474217\n",
+       "Tower Hamlets        2015  421943.837017\n",
+       "Waltham Forest       2015  357513.365125\n",
+       "Hammersmith & Fulham 2011  518573.673433"
       ]
      },
      "execution_count": 35,
@@ -3576,47 +3576,19 @@
     "### 4. Conclusion\n",
     "What can you conclude? Type out your conclusion below. \n",
     "\n",
-    "Please see the google doc for the 'Summarize your findings' portion of this assignment for written conclusions and explanations. \n",
-    "\n",
     "Look back at your notebook. Think about how you might summarize what you have done, and prepare a quick presentation on it to your mentor at your next meeting. \n",
     "\n",
     "We hope you enjoyed this practical project. It should have consolidated your data hygiene and pandas skills by looking at a real-world problem involving just the kind of dataset you might encounter as a budding data scientist. Congratulations, and looking forward to seeing you at the next step in the course! "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "A: We concluded that the Hackney borough is the most expensive. This was done using a ratio of the current average home price (2018) over the average home price two decades ago (1998). Thus, a larger price ratio means the current home price is larger than the previous one. This metric allows us to evaluate the mean home price over time, given different boroughs. The Hackney borough had the highest price ratio and is thus the most expensive with respect to previous prices. There are no other obvious interesting trends noted at this time. \n",
+    "The main challenges encountered were cleaning the dataset. There was a significant amount of data that was extraneous. Ultimately, using the unique function and placing the names of the boroughs that were not part of the 32 that we were investigating into a list and filtering them out of the set. Another possible solution for this may be to do the inverse, that is, create a list of strings that represent the 32 boroughs and only include them. I don’t believe there were any challenges that I could not overcome.\n",
+    "I believe that simply using the average home price between two years two decades apart likely suffers from some bias. It would be more prudent to create a year over year ratio, like CPI, to show change in price of a real estate asset. There may be hidden reasons for some of the boroughs being more expensive than others that are not included solely in the price, that could lead us to a different conclusion as well. Ultimately, while our price ratio is a decent metric for our purposes, it is likely that it does not complete the picture and suffers from omitted variable bias. Also, investigating price with respect to geographic location might provide us further insights into price changes. \n"
+   ]
   }
  ],
  "metadata": {
