--- a/Bayesian_optimization_case_study.ipynb
+++ b/Bayesian_optimization_case_study.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T16:39:09.312682Z",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -78,16 +78,14 @@
     {
      "data": {
       "text/plain": [
-       "['.config',\n",
-       " 'flight_delays_test.csv.zip',\n",
-       " 'flight_delays_train.csv.zip',\n",
-       " 'sample_data']"
+       "['flight_delays_test.csv.zip',\n",
+       " '.DS_Store',\n",
+       " 'Bayesian_optimization_case_study.ipynb',\n",
+       " 'flight_delays_train.csv.zip']"
       ]
      },
-     "execution_count": 45,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 2,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -168,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -192,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -232,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -249,11 +247,11 @@
      "text": [
       "|   iter    |  target   |     a     |     b     |\n",
       "-------------------------------------------------\n",
-      "| \u001b[0m 1       \u001b[0m | \u001b[0m 7.847   \u001b[0m | \u001b[0m 1.67    \u001b[0m | \u001b[0m 6.177   \u001b[0m |\n",
-      "| \u001b[0m 2       \u001b[0m | \u001b[0m 7.075   \u001b[0m | \u001b[0m 1.418   \u001b[0m | \u001b[0m 5.657   \u001b[0m |\n",
-      "| \u001b[0m 3       \u001b[0m | \u001b[0m 7.476   \u001b[0m | \u001b[0m 2.129   \u001b[0m | \u001b[0m 5.348   \u001b[0m |\n",
-      "| \u001b[95m 4       \u001b[0m | \u001b[95m 10.0    \u001b[0m | \u001b[95m 3.0     \u001b[0m | \u001b[95m 7.0     \u001b[0m |\n",
-      "| \u001b[0m 5       \u001b[0m | \u001b[0m 9.387   \u001b[0m | \u001b[0m 3.0     \u001b[0m | \u001b[0m 6.387   \u001b[0m |\n",
+      "| \u001b[0m1        \u001b[0m | \u001b[0m7.047    \u001b[0m | \u001b[0m2.317    \u001b[0m | \u001b[0m4.73     \u001b[0m |\n",
+      "| \u001b[95m2        \u001b[0m | \u001b[95m7.687    \u001b[0m | \u001b[95m2.697    \u001b[0m | \u001b[95m4.99     \u001b[0m |\n",
+      "| \u001b[0m3        \u001b[0m | \u001b[0m7.166    \u001b[0m | \u001b[0m1.829    \u001b[0m | \u001b[0m5.337    \u001b[0m |\n",
+      "| \u001b[0m4        \u001b[0m | \u001b[0m5.829    \u001b[0m | \u001b[0m1.783    \u001b[0m | \u001b[0m4.046    \u001b[0m |\n",
+      "| \u001b[95m5        \u001b[0m | \u001b[95m8.897    \u001b[0m | \u001b[95m3.0      \u001b[0m | \u001b[95m5.897    \u001b[0m |\n",
       "=================================================\n"
      ]
     }
@@ -274,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -289,19 +287,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': 3.0, 'b': 7.0}\n"
+      "{'a': 3.0, 'b': 5.89693090682444}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "10.0"
+       "8.89693090682444"
       ]
      },
-     "execution_count": 49,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 6,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -341,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -365,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -474,20 +470,23 @@
        "</div>"
       ],
       "text/plain": [
-       "  Month DayofMonth DayOfWeek  DepTime  ... Origin Dest Distance  dep_delayed_15min\n",
-       "0   c-8       c-21       c-7     1934  ...    ATL  DFW      732                  N\n",
-       "1   c-4       c-20       c-3     1548  ...    PIT  MCO      834                  N\n",
-       "2   c-9        c-2       c-5     1422  ...    RDU  CLE      416                  N\n",
-       "3  c-11       c-25       c-6     1015  ...    DEN  MEM      872                  N\n",
-       "4  c-10        c-7       c-6     1828  ...    MDW  OMA      423                  Y\n",
+       "  Month DayofMonth DayOfWeek  DepTime UniqueCarrier Origin Dest  Distance  \\\n",
+       "0   c-8       c-21       c-7     1934            AA    ATL  DFW       732   \n",
+       "1   c-4       c-20       c-3     1548            US    PIT  MCO       834   \n",
+       "2   c-9        c-2       c-5     1422            XE    RDU  CLE       416   \n",
+       "3  c-11       c-25       c-6     1015            OO    DEN  MEM       872   \n",
+       "4  c-10        c-7       c-6     1828            WN    MDW  OMA       423   \n",
        "\n",
-       "[5 rows x 9 columns]"
+       "  dep_delayed_15min  \n",
+       "0                 N  \n",
+       "1                 N  \n",
+       "2                 N  \n",
+       "3                 N  \n",
+       "4                 Y  "
       ]
      },
-     "execution_count": 51,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 8,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -507,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -600,10 +599,8 @@
        "max      2534.000000    4962.00000"
       ]
      },
-     "execution_count": 52,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 9,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -633,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:38:42.677690Z",
@@ -662,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -727,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -751,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -776,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -800,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T14:31:58.412296Z",
@@ -859,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:40:14.034265Z",
@@ -910,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:48:04.682447Z",
@@ -930,7 +927,21 @@
      "output_type": "stream",
      "text": [
       "|   iter    |  target   | lambda_l1 | lambda_l2 | max_depth | min_ch... | min_da... | num_le... |\n",
-      "-------------------------------------------------------------------------------------------------\n"
+      "-------------------------------------------------------------------------------------------------\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=992, min_child_samples=5180 will be ignored. Current value: min_data_in_leaf=992\n",
+      "| \u001b[0m1        \u001b[0m | \u001b[0m0.7324   \u001b[0m | \u001b[0m0.003636 \u001b[0m | \u001b[0m0.04422  \u001b[0m | \u001b[0m23.93    \u001b[0m | \u001b[0m5.181e+03\u001b[0m | \u001b[0m992.6    \u001b[0m | \u001b[0m1.434e+03\u001b[0m |\n",
+      "| \u001b[95m2        \u001b[0m | \u001b[95m0.7424   \u001b[0m | \u001b[95m0.02909  \u001b[0m | \u001b[95m0.02022  \u001b[0m | \u001b[95m5.742    \u001b[0m | \u001b[95m8.72e+03 \u001b[0m | \u001b[95m1.878e+03\u001b[0m | \u001b[95m1.297e+03\u001b[0m |\n",
+      "| \u001b[0m3        \u001b[0m | \u001b[0m0.7295   \u001b[0m | \u001b[0m0.02441  \u001b[0m | \u001b[0m0.04053  \u001b[0m | \u001b[0m5.149    \u001b[0m | \u001b[0m3.282e+03\u001b[0m | \u001b[0m854.2    \u001b[0m | \u001b[0m1.864e+03\u001b[0m |\n",
+      "| \u001b[95m4        \u001b[0m | \u001b[95m0.7434   \u001b[0m | \u001b[95m0.02949  \u001b[0m | \u001b[95m0.04636  \u001b[0m | \u001b[95m10.12    \u001b[0m | \u001b[95m8.624e+03\u001b[0m | \u001b[95m1.909e+03\u001b[0m | \u001b[95m1.38e+03 \u001b[0m |\n",
+      "| \u001b[0m5        \u001b[0m | \u001b[0m0.7373   \u001b[0m | \u001b[0m0.009331 \u001b[0m | \u001b[0m0.0297   \u001b[0m | \u001b[0m7.238    \u001b[0m | \u001b[0m8.535e+03\u001b[0m | \u001b[0m1.092e+03\u001b[0m | \u001b[0m1.376e+03\u001b[0m |\n",
+      "| \u001b[95m6        \u001b[0m | \u001b[95m0.7434   \u001b[0m | \u001b[95m0.007577 \u001b[0m | \u001b[95m0.01671  \u001b[0m | \u001b[95m14.89    \u001b[0m | \u001b[95m8.683e+03\u001b[0m | \u001b[95m1.941e+03\u001b[0m | \u001b[95m2.464e+03\u001b[0m |\n",
+      "| \u001b[95m7        \u001b[0m | \u001b[95m0.7435   \u001b[0m | \u001b[95m0.04246  \u001b[0m | \u001b[95m0.04569  \u001b[0m | \u001b[95m16.89    \u001b[0m | \u001b[95m7.388e+03\u001b[0m | \u001b[95m1.994e+03\u001b[0m | \u001b[95m2.166e+03\u001b[0m |\n",
+      "| \u001b[0m8        \u001b[0m | \u001b[0m0.7434   \u001b[0m | \u001b[0m0.04432  \u001b[0m | \u001b[0m0.04631  \u001b[0m | \u001b[0m15.29    \u001b[0m | \u001b[0m7.236e+03\u001b[0m | \u001b[0m1.972e+03\u001b[0m | \u001b[0m3.969e+03\u001b[0m |\n",
+      "| \u001b[0m9        \u001b[0m | \u001b[0m0.7431   \u001b[0m | \u001b[0m0.03253  \u001b[0m | \u001b[0m0.02868  \u001b[0m | \u001b[0m17.32    \u001b[0m | \u001b[0m8.677e+03\u001b[0m | \u001b[0m1.864e+03\u001b[0m | \u001b[0m2.473e+03\u001b[0m |\n",
+      "| \u001b[0m10       \u001b[0m | \u001b[0m0.7231   \u001b[0m | \u001b[0m0.03861  \u001b[0m | \u001b[0m0.0126   \u001b[0m | \u001b[0m19.58    \u001b[0m | \u001b[0m61.02    \u001b[0m | \u001b[0m107.9    \u001b[0m | \u001b[0m3.978e+03\u001b[0m |\n",
+      "| \u001b[0m11       \u001b[0m | \u001b[0m0.7209   \u001b[0m | \u001b[0m0.01537  \u001b[0m | \u001b[0m0.005267 \u001b[0m | \u001b[0m43.06    \u001b[0m | \u001b[0m9.812e+03\u001b[0m | \u001b[0m188.8    \u001b[0m | \u001b[0m3.999e+03\u001b[0m |\n",
+      "| \u001b[0m12       \u001b[0m | \u001b[0m0.7433   \u001b[0m | \u001b[0m0.03699  \u001b[0m | \u001b[0m0.04053  \u001b[0m | \u001b[0m13.32    \u001b[0m | \u001b[0m6.01e+03 \u001b[0m | \u001b[0m1.705e+03\u001b[0m | \u001b[0m3.92e+03 \u001b[0m |\n",
+      "=================================================================================================\n"
      ]
     }
    ],
@@ -958,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:49:01.513767Z",
@@ -968,7 +979,24 @@
     "colab_type": "code",
     "id": "oc8z6mfy-KZS"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target': 0.7434855455501382,\n",
+       " 'params': {'lambda_l1': 0.042459747257726554,\n",
+       "  'lambda_l2': 0.045692944461641835,\n",
+       "  'max_depth': 16.887694890745948,\n",
+       "  'min_child_samples': 7387.68471891783,\n",
+       "  'min_data_in_leaf': 1993.9090946794486,\n",
+       "  'num_leaves': 2166.2739836261007}}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lgbBO.max"
    ]
@@ -989,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:51:01.001688Z",
@@ -999,7 +1027,24 @@
     "colab_type": "code",
     "id": "X1ttZmrI-KZX"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target': 0.7323985361086788,\n",
+       " 'params': {'lambda_l1': 0.0036360469417093923,\n",
+       "  'lambda_l2': 0.04421987575020335,\n",
+       "  'max_depth': 23.92812987717292,\n",
+       "  'min_child_samples': 5180.789485796057,\n",
+       "  'min_data_in_leaf': 992.5947750492096,\n",
+       "  'num_leaves': 1434.1214076720337}}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lgbBO.res[0]"
    ]
@@ -1012,7 +1057,7 @@
   },
   "deepnote_execution_queue": [],
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1026,7 +1071,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.2"
   },
   "varInspector": {
    "cols": {
@@ -1056,6 +1101,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7e1998ff7f8aa20ada591c520b972326324e5ea05489af9e422744c7c09f6dad"
+   }
   }
  },
  "nbformat": 4,
